--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -54,10 +54,10 @@ It is in the compelling zest of high adventure and of victory, and in creative a
 <div class="w3-container w3-padding-64" id="contact">
     <div class="w3-row-padding w3-center w3-padding-16" id="pricing">
             <h2>Any Questions?</h2>
-            <p>We respond to all requests within 24 hours.</p><br>
+            <p>We endeavour to respond within 24 hours.</p><br>
     </div>
   <div class="w3-row">
-    <div class="w3-col m5">
+    <div class="w3-half w3-left">
     <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Details</span></div>
       <p>Swing by for a cup of coffee or just say hi!</p>
       <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>&nbsp;&nbsp;Mayor Street Lower, International Financial Services Centre, Dublin</p>
@@ -72,8 +72,8 @@ It is in the compelling zest of high adventure and of victory, and in creative a
     <p>Saturday: 10am - 5pm</p>
     <p style="font-style: italic">Closed on Sundays and Bank Holidays</p>
     </div>
-    <div class="w3-col m7">
-      <form class="w3-container w3-card-4 w3-padding-16 w3-white">
+    <div class="w3-half">
+      <form class="w3-container w3-card-4 w3-padding-16 w3-white" method="post">
       <div class="w3-section">      
         <label>First Name*</label>
         <input class="w3-input" type="text" id="fName" name="fName" required>
