--- a/scripts/app.css
+++ b/scripts/app.css
@@ -1,3 +1,7 @@
+.editcheck {
+    display: none;
+}
+
 #deals {
     margin: auto;
     text-align: center;
@@ -47,7 +51,7 @@ img {
     padding: 10px;
 }
 
-.items {
+.item {
     margin: auto;
     text-align: center;
     width: 50%;
