manage forms section added --> need to add clear function

--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -20,6 +20,9 @@
   <a href="book" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Plan Your Trip</a>
   <a href="comments" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Testimonials</a>
   <a href="contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Get In Touch</a>
+  <a href="manage" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-white" title="Login">
+        <img src="avatar.png" class="w3-circle" style="height:20px;width:20px" alt="Avatar">
+      </a>
 </div>
 </div>
 
