--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -100,11 +100,11 @@ It is in the compelling zest of high adventure and of victory, and in creative a
       </div>
       <div class="w3-section">      
         <label>Subject*</label>
-        <input class="w3-input" type="text" id="subject" name="Subject" required>
+        <input class="w3-input" type="text" id="Subject" name="Subject" required>
       </div>
       <div class="w3-section">      
         <label>Message*</label>
-        <input class="w3-input" type="text" id="message" name="Message" required>
+        <input class="w3-input" type="text" id="Message" name="Message" required>
       </div>  
       <div class="w3-section">      
         <label>How much is 5 + 4?*</label>
