social media buttons

--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -2,11 +2,10 @@
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <h4>Follow Us</h4>
-        <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
-        <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
-        <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
-        <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
-        <a class="w3-button w3-large w3-teal w3-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+        <a class="w3-xlarge" href="http://www.facebook.com" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a>
+        <a class="w3-xlarge" href="http://www.twitter.com" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a>
+        <a class="w3-xlarge" href="http://www.instagram.com" target="_blank" title="Instagram"><i class="fa fa-instagram"></i></a>
+        <a class="w3-xlarge" href="http://www.linkedin.com" target="_blank" title="Linkedin"><i class="fa fa-linkedin"></i></a>
         <p>WAD 2019</a></p>
       
         <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
