--- a/scripts/app.css
+++ b/scripts/app.css
@@ -1,3 +1,36 @@
 .editcheck {
     display: none;
 }
+
+.fa-facebook, .fa-twitter, .fa-linkedin, .fa-instagram {
+    padding: 12.5px;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+  }
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-instagram {
+  background: #C13584;
+  color: white;
+}
