Cleaned up header and footer

--- a/views/book.ejs
+++ b/views/book.ejs
@@ -2,10 +2,10 @@
 
 
     <!-- div that pulls the information for a particular location from the JSON file -->
-    <div class="grid-container" id="hidetrip" style="display: block">
-        <function(location)>
+    <div id="hidetrip" style="display: block">
+        
             <div class="item">
-                <h2 class="itemtitle">
+                <h2 class="itemtitle w3-padding-32">
                     <%= location.city %>
                 </h2>
                 <img src="/hotelbedroom.jpeg">
