--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -122,4 +122,6 @@ It is in the compelling zest of high adventure and of victory, and in creative a
 <!-- Image of location/map -->
 <img src="map.jpg" class="w3-image w3-greyscale-min" style="width:100%;">
 
+<script src="contact.js"></script>
+
 <% include ../partials/footer %>
