--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -2,6 +2,7 @@
 
 
 <html>
+<head>
 <title>WAD Project</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,17 +13,21 @@
 <link rel="stylesheet" href="app.css" type="text/css">
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="contact.js"></script>
+</head>
 
+
+<body>
 <!-- Navbar -->
 <div class="w3-top">
 <div class="w3-bar w3-theme-d2 w3-left-align">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
   <a href="/" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Bon Voyage!</a>
-  <a href="book" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Plan Your Trip</a>
-  <a href="comments" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Testimonials</a>
-  <a href="contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Get In Touch</a>
-  <a href="manage" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-white" title="Login">
+  <!--
+  <a href="/book" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Plan Your Trip</a>
+  -->
+  <a href="/comments" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Testimonials</a>
+  <a href="/contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Get In Touch</a>
+  <a href="/manage" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-white" title="Login">
         <img src="avatar.png" class="w3-circle" style="height:20px;width:20px" alt="Avatar">
       </a>
 </div>
