--- a/scripts/app.css
+++ b/scripts/app.css
@@ -2,37 +2,40 @@
     display: none;
 }
 
-.fa-facebook, .fa-twitter, .fa-linkedin, .fa-instagram {
+.fa-facebook,
+.fa-twitter,
+.fa-linkedin,
+.fa-instagram {
     padding: 12.5px;
     height: 50px;
     width: 50px;
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
-  }
+}
 
 .fa:hover {
     opacity: 0.7;
 }
 
 .fa-facebook {
-  background: #3B5998;
-  color: white;
+    background: #3B5998;
+    color: white;
 }
 
 .fa-twitter {
-  background: #55ACEE;
-  color: white;
+    background: #55ACEE;
+    color: white;
 }
 
 .fa-linkedin {
-  background: #007bb5;
-  color: white;
+    background: #007bb5;
+    color: white;
 }
 
 .fa-instagram {
-  background: #C13584;
-  color: white;
+    background: #C13584;
+    color: white;
 }
 
 #deals {
@@ -60,33 +63,4 @@ img {
 
 #dest2 {
     margin: 50px 0;
-}
-
-#hidetrip {
-    margin: 40px 100px 40px 100px;
-    text-align: center;
-    background-color: #DCDCDC;
-    padding: 10px;
-}
-
-#hideform {
-    margin: 40px 100px 40px 100px;
-    text-align: center;
-    background-color: #DCDCDC;
-    padding: 10px;
-}
-
-#fireworks {
-    margin: auto;
-    text-align: center;
-    width: 50%;
-    border: 3px solid black;
-    padding: 10px;
-}
-
-.item {
-    margin: auto;
-    text-align: center;
-    width: 50%;
-    padding: 10px;
 }
