confirm box for deleting form

--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -11,7 +11,7 @@
   <div class="w3-card white" style="height:500px">
     <div class="w3-container w3-teal">
       <h3>Request # <%= forms.id %> 
-      <a class="w3-right w3-container w3-button" style="color:teal; font-size:smaller; background-color:white;" href="/delete/<%= forms.id %>"> Clear</a></h3>
+      <a class="w3-right w3-container w3-button" style="color:teal; font-size:smaller; background-color:white;" onclick="confirmDeleteForm('<%= forms.id %>')">Clear</a></h3>
     </div>
     <ul class="w3-ul w3-border-top">
       <li>
@@ -35,5 +35,7 @@
   
 
   <hr>
+
+<script src="manage.js"></script>
 
 <% include ../partials/footer %>
