--- a/scripts/app.css
+++ b/scripts/app.css
@@ -64,3 +64,32 @@ img {
 #dest2 {
     margin: 50px 0;
 }
+
+#hidetrip {
+    margin: 40px 100px 40px 100px;
+    text-align: center;
+    background-color: #DCDCDC;
+    padding: 10px;
+}
+
+#hideform {
+    margin: 40px 100px 40px 100px;
+    text-align: center;
+    background-color: #DCDCDC;
+    padding: 10px;
+}
+
+#fireworks {
+    margin: auto;
+    text-align: center;
+    width: 50%;
+    border: 3px solid black;
+    padding: 10px;
+}
+
+.item {
+    margin: auto;
+    text-align: center;
+    width: 50%;
+    padding: 10px;
+}
