--- a/views/book.ejs
+++ b/views/book.ejs
@@ -1,14 +1,16 @@
 <% include ../partials/header %>
 
 
+    <link rel="stylesheet" href="../app.css" type="text/css">
+    <script src="../booking.js"></script>
     <!-- div that pulls the information for a particular location from the JSON file -->
-    <div class="w3-content" id="hidetrip" style="display: block">
+    <div id="hidetrip" style="display: block">
 
-        <div class="w3-center">
+        <div class="item">
             <h2 class="itemtitle w3-padding-32">
                 <%= location.city %>
             </h2>
-            <img src="/hotelbedroom.jpeg" width="75%">
+            <img src="/hotelbedroom.jpeg">
             <div class="items">
                 <h3> Included in this amazing deal:</h3>
                 <p class="itemp">
@@ -28,7 +30,7 @@
     </div>
 
     <!-- booking form, user enters full name, email and does simple validation -->
-    <div class="w3-content" id="hideform" style="display: block">
+    <div class="w3-container" id="hideform" style="display: block">
         <h2>Fill in your info below to book this trip</h2>
 
         <input class="w3-input w3-padding-16 w3-border" id="fullName" type="text" placeholder="Name" required name="Name">
@@ -43,13 +45,13 @@
     </div>
 
     <!-- booking confirmed div, set not to display so it can display when called for -->
-    <div class="w3-content w3-padding-64" id="fireworks" style="display: none">
+    <div class="grid-container" id="fireworks" style="display: none">
         <div class="w3-topbar w3-border-amber">
-            <img src="/fireworks.jpeg" width="100%">
+            <img src="/fireworks.jpeg">
             <h1 id="congrats">Your booking has been confirmed. We'll be in touch soon!</h1>
         </div>
     </div>
-
+    <!--  
     <script>
         function checkForm() {
             // checking that the users enters full name
@@ -103,6 +105,6 @@
                 }
             }
         }
-    </script>
-
+    </script>*/
+-->
     <%include ../partials/footer %>
