--- a/views/book.ejs
+++ b/views/book.ejs
@@ -1,6 +1,9 @@
 <% include ../partials/header %>
 
-
+    <script>
+        // Make the avatar image show in book
+        $("#avatarImg").attr('src', '../avatar.png');
+    </script>
     <link rel="stylesheet" href="../app.css" type="text/css">
     <script src="../booking.js"></script>
     <!-- div that pulls the information for a particular location from the JSON file -->
