--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -73,7 +73,7 @@ It is in the compelling zest of high adventure and of victory, and in creative a
     <p style="font-style: italic">Closed on Sundays and Bank Holidays</p>
     </div>
     <div class="w3-half">
-      <form class="w3-container w3-card-4 w3-padding-16 w3-white" method="post">
+      <form id="contactForm" class="w3-container w3-card-4 w3-padding-16 w3-white" method="post">
       <div class="w3-section">      
         <label>First Name*</label>
         <input class="w3-input" type="text" id="fName" name="fName" required>
@@ -113,7 +113,7 @@ It is in the compelling zest of high adventure and of victory, and in creative a
       </div>
       <input class="w3-check" type="checkbox" checked name="Newsletter">
       <label>Subscribe to Bon Voyage! newsletter</label>
-      <button type="submit" class="w3-button w3-right w3-theme" onclick="validateContactForm()">Send</button>
+      <button class="w3-button w3-right w3-theme" onclick="validateContactForm()">Send</button>
       </form>
     </div>
   </div>
