Comments section styled, some jquerry added

--- a/scripts/app.css
+++ b/scripts/app.css
@@ -93,3 +93,13 @@ img {
     width: 50%;
     padding: 10px;
 }
+
+#commentform {
+    
+    display: none;
+ 
+}
+
+textarea {
+    max-width: 100%;
+  }
