--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -1,36 +1,40 @@
 <% include ../partials/header %>
 
 <script src="comments.js"></script>
-<div>
-    <h1>Add</h1>
 
-    <div>
+
+<div class="w3-padding-large w3-padding-64" >
+    <h1>Add comment </h1>
+    <button onclick="showComment()" id="showcommentbtn">Comment</button>
+    <div class="w3-container" id="commentform">
+    <div class="w3-container w3-twothird w3-card w3-padding-large w3-margin-bottom w3-margin-top w3-round">
         <form accept-charset="UTF-8" action="/comments" method="post">
-            <label for="name">Name:&nbsp;</label>
-            <input type="text" name="name">
+            <label for="name">Name:&nbsp;</label><br>
+            <input class="w3-input" type="text" name="name">
             <br><br>
-            <label for="email">Email:&nbsp;</label>
-            <input type="text" name="email">
+            <label for="email">Email:&nbsp;</label><br>
+            <input class="w3-input" type="text" name="email">
             <span> &nbsp;(will not be displayed)</span>
             <br><br>
-            <label for="location">Location:&nbsp;</label>
-            <input type="text" name="location">
+            <label for="location">Location:&nbsp;</label><br>
+            <input class="w3-input" type="text" name="location">
             <br><br>
             <label for="comment">Comment:</label>
             <br>
-            <textarea name="comment" cols="30" rows="4"></textarea>
+            <textarea name="comment w3-input" cols="40" rows="4"></textarea>
             <br><br>
-            <button>Comment</button>
+            <button onclick="submitForm()">Comment</button>
         </form>
         <br><br>
     </div>
+</div>
 
-    <div>
+    <div class="w3-container">
         <% comments.forEach(function(comment){ %>
-              <div>
+              <div class="w3-card w3-padding-large w3-twothird w3-margin-bottom w3-margin-top w3-round"> 
                     <h3> Location: <%= comment.location_name %></h3>
-                    <h3> Name: <%= comment.name%></h3>
-                    <h3> Comment: <%= comment.comment %></h3>
+                    <h5> Name: <%= comment.name%></h3>
+                    <h5> Comment: <%= comment.comment %></h3>
                     <button onclick="displayField('<%= comment.id %>')" id="edit<%= comment.id %>">Edit</button>                 
                     <div class="editcheck" id="<%= comment.id %>">
                         <p>Please enter your email to verify your edit:</p>
