--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="app.css" type="text/css">
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="password.js"></script>
 </head>
 
 
@@ -27,9 +28,8 @@
   -->
   <a href="/comments" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Testimonials</a>
   <a href="/contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Get In Touch</a>
-  <a href="/manage" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-white" title="Login">
+  <button class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-white" onclick="passwordCheck()" title="Login">
         <img src="avatar.png" class="w3-circle" style="height:20px;width:20px" alt="Avatar" id="avatarImg">
-      </a>
+  </button>
 </div>
 </div>
-
