--- a/scripts/app.css
+++ b/scripts/app.css
@@ -103,3 +103,14 @@ img {
 textarea {
     max-width: 100%;
   }
+
+  
+.image-wrapper {
+    position: relative;
+    width: 100%;
+}
+.image-wrapper #tellus {
+    position: absolute;
+    left: 0;
+    top: 75%;
+}
