--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -14,6 +14,7 @@
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="password.js"></script>
+<script src="navbar.js"></script>
 </head>
 
 
@@ -31,5 +32,12 @@
   <button class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-white" onclick="passwordCheck()" title="Login">
         <img src="avatar.png" class="w3-circle" style="height:20px;width:20px" alt="Avatar" id="avatarImg">
   </button>
+</div>
+
+<div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
+    <a href="/" class="w3-bar-item w3-button">Bon Voyage!</a>
+    <a href="/comments" class="w3-bar-item w3-button">Testimonials</a>
+    <a href="/contact" class="w3-bar-item w3-button">Get In Touch</a>
+  </div>
 </div>
 </div>
