--- a/views/commentsedit.ejs
+++ b/views/commentsedit.ejs
@@ -3,25 +3,33 @@
         // Make the avatar image show in book
         $("#avatarImg").attr('src', '../avatar.png');
     </script>
-<div class="w3-card">
+    <script src="../comments.js"></script>
+<div class="w3-container w3-margin-bottom w3-margin-top w3-padding-32 w3-padding-large">
+    <div class="w3-container w3-amber w3-hover-orange w3-hide-small w3-twothird w3-margin-bottom w3-margin-top">
+            <h2>Edit comment</h2>
+        </div>
+        <div class="w3-container">
+<div class="w3-container w3-twothird w3-card w3-padding-large w3-margin-bottom w3-margin-top w3-round w3-topbar w3-border-amber">
     
-        <form accept-charset="UTF-8" action="/commentsedit/<%= comment.id %>" method="post">
-            <label for="name">Name:</label>
-            <input type="text" name="name" value="<%= comment.name %>">
+        <form accept-charset="UTF-8" action="/commentsedit/<%= comment.id %>" method="post" id="commentForm" onsubmit="event.preventDefault(); validateSubmitForm()">
+            <label for="name" >Name:</label>
+            <input class="w3-input" type="text" name="name" value="<%= comment.name %>">
             <br><br>
             <label for="email">Email:</label>
-            <input type="text" name="email" value="<%= comment.email %>">
+            <input class="w3-input" type="text" name="email" value="<%= comment.email %>">
             <br><br>
             <label for="location">Location:</label>
-            <input type="text" name="location" value="<%= comment.location_name %>">
+            <input class="w3-input" type="text" name="location" value="<%= comment.location_name %>">
             <br><br>
             <label for="comment">Comment:</label>
-            <textarea name="comment" cols="30" rows="4" ><%= comment.comment %></textarea>
+            <textarea class="w3-input" name="comment" cols="30" rows="4" ><%= comment.comment %></textarea>
             <br><br>
-            <button>Save</button>
-            <a href="/commentdelete/<%= comment.id %>">Delete</a>
+            <button class="w3-btn w3-teal w3-round"> Save</button>
+            <a class="w3-btn w3-red w3-round" href="/commentdelete/<%= comment.id %>">Delete</a>
 
         </form>
+</div>
+</div>
 </div>
 
 <% include ../partials/footer %>
