--- a/views/commentsedit.ejs
+++ b/views/commentsedit.ejs
@@ -1,8 +1,9 @@
 <% include ../partials/header %>
-<script>
+    <script>
         // Make the avatar image show in book
         $("#avatarImg").attr('src', '../avatar.png');
     </script>
+    <link rel="stylesheet" href="../app.css" type="text/css">
     <script src="../comments.js"></script>
 <div class="w3-container w3-margin-bottom w3-margin-top w3-padding-32 w3-padding-large">
     <div class="w3-container w3-amber w3-hover-orange w3-hide-small w3-twothird w3-margin-bottom w3-margin-top">
@@ -14,15 +15,19 @@
         <form accept-charset="UTF-8" action="/commentsedit/<%= comment.id %>" method="post" id="commentForm" onsubmit="event.preventDefault(); validateSubmitForm()">
             <label for="name" >Name:</label>
             <input class="w3-input" type="text" name="name" value="<%= comment.name %>">
+            <p class="w3-text-red" id="name"></p>
             <br><br>
             <label for="email">Email:</label>
             <input class="w3-input" type="text" name="email" value="<%= comment.email %>">
+            <p class="w3-text-red" id="email"></p>
             <br><br>
             <label for="location">Location:</label>
             <input class="w3-input" type="text" name="location" value="<%= comment.location_name %>">
+            <p class="w3-text-red" id="location"></p>
             <br><br>
             <label for="comment">Comment:</label>
             <textarea class="w3-input" name="comment" cols="30" rows="4" ><%= comment.comment %></textarea>
+            <p class="w3-text-red" id="comment"></p>
             <br><br>
             <button class="w3-btn w3-teal w3-round"> Save</button>
             <a class="w3-btn w3-red w3-round" href="/commentdelete/<%= comment.id %>">Delete</a>
